# illuminos

./: .gitignore  Cargo.toml  caca.txt  run-bios.sh  run-uefi.sh  run.sh
.cargo/: config.toml
asm/: switch.asm  syscall.asm
src/: allocator.rs  context.rs  fs.rs  gdt.rs  idt.rs  log.rs  main.rs  math.rs  util.rs
src/allocator/: memory.rs  paging.rs
src/boot/: bios.rs  uefi.rs
src/drivers/: disk.rs  keyboard.rs  mod.rs  vga.rs
src/drivers/disk/: ata.rs
src/drivers/keyboard/: azerty.rs  qwerty.rs
src/elf/: mod.rs
src/fs/: ext2.rs  fat32.rs
src/graphic/: app.rs  console.rs  font.rs  framebuffer.rs  mod.rs  text.rs  vram.rs  widget.rs  windows.rs
src/illuminos_c/: graphic.h
src/io/: mod.rs  pci.rs  port.rs  serial.rs
src/libc/: cgraphic.rs  cio.rs  mod.rs
src/syscall/: mod.rs
src/thread/: mod.rs
uefi/: OVMF_VARS_4M.fd
